8222397: x86_32 tests with UseSHA1Intrinsics SEGV due to garbled registers

Reviewed-by: kvn, dsamersoff